<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="20dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

        <include
            android:id="@+id/maps_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            layout="@layout/maps_card"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/transportations"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="연락처"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/call_info"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/school_office"
            android:textColor="@android:color/black"
            android:id="@+id/call_1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/administration_department"
            android:textColor="@android:color/black"
            android:id="@+id/call_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/fax"
            android:textColor="@android:color/black"
            android:id="@+id/call_3"/>

    </LinearLayout>

</ScrollView>
