<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mUpdateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dayweek"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5sp"
        android:background="@color/day"
        android:paddingTop="5sp">

        <TextView
            android:id="@+id/mCalender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/day"
            android:text="00월 00일"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/mDayOfTheWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="월요일"
            android:background="@color/day"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
        <Button
            android:id="@+id/updater"
            android:text="새로고침"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:background="@color/day"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mWidgetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5sp"
        android:paddingRight="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/today_lunch"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:text="@string/widget_no_data"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/today_dinner"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:text="@string/widget_no_data"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
